finished in memory auth

--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
-  "name": "simple-login",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Gi Wah Dávalos Loo <giwirodavalos@gmail.com>",
-  "license": "ISC",
-  "dependencies": {
-    "koa": "^2.4.1",
-    "koa-bodyparser": "^4.2.0",
-    "koa-session": "^5.5.0"
-  }
+    "name": "simple-login",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "start": "node index.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "Gi Wah Dávalos Loo <giwirodavalos@gmail.com>",
+    "license": "ISC",
+    "dependencies": {
+        "koa": "^2.4.1",
+        "koa-body": "^2.5.0",
+        "koa-router": "^7.3.0",
+        "koa-session": "^5.5.0",
+        "winston": "^2.4.0"
+    }
 }
